// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmField displays a number input 1`] = `
<input
  class="tm-field"
  type="number"
/>
`;

exports[`TmField displays a textarea 1`] = `
<textarea
  class="tm-field"
/>
`;

exports[`TmField displays a toggle 1`] = `
<label
  class="tm-toggle unchecked"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      on
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        on
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        on
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      type="checkbox"
      value=""
    />
  </div>
</label>
`;

exports[`TmField displays a toggle 2`] = `
<label
  class="tm-toggle unchecked"
>
  <div
    class="tm-toggle-wrapper"
  >
    <span>
      on
    </span>
     
    <div
      class="toggle-option-checked"
    >
      <div>
        on
      </div>
    </div>
     
    <div
      class="toggle-option-unchecked"
    >
      <div>
        on
      </div>
    </div>
     
    <div
      class="toggle-handle"
    />
     
    <input
      type="checkbox"
      value=""
    />
  </div>
</label>
`;

exports[`TmField displays as a select 1`] = `
<div
  class="tm-select"
>
  <select
    class="tm-field tm-field-select"
  >
    <option
      disabled="disabled"
      hidden="hidden"
      selected="selected"
      value=""
    >
      Select option...
    </option>
     
    <option
      value="1"
    >
      1
    </option>
    <option
      value="1"
    >
      1
    </option>
  </select>
   
  <div
    class="tm-field-select-addon"
  >
    <i
      class="material-icons"
    >
      arrow_drop_down
    </i>
  </div>
</div>
`;

exports[`TmField has the expected html structure 1`] = `
<input
  class="tm-field"
  type="text"
/>
`;
